[package]
name = "hello-world"
version = "0.1.0"
authors = ["Steven Lotito <steven.lotito@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8"

[dev-dependencies]
actix-rt = "2.1.0"
spectral = "0.6.0"
regex = "0.2"